--- a/app.css
+++ b/app.css
@@ -20,8 +20,10 @@ body {
 }
 
 #app {
-  display: flex;
-  flex-wrap: wrap;
+  display: inline-block;
+  position: relative;
+  width: 100%;
+  overflow: hidden;
 }
 
 .slider__legend {
