--- a/app.css
+++ b/app.css
@@ -59,3 +59,13 @@ body {
   font-variant-numeric: tabular-nums lining-nums;
   min-width: 60px;
 }
+
+.button-container {
+  width: 100%;
+  text-align: right;
+  padding: 10px;
+}
+
+.button-container button {
+  padding: 4px;
+}
